// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ключи пунктов тестов не меняются при правке узбекского текста (снимок) > Big Five: id, original_id, factor, facet, is_reverse 1`] = `
[
  {
    "facet": "Anxiety",
    "factor": "Neuroticism",
    "id": 1,
    "is_reverse": false,
    "original_id": 1,
  },
  {
    "facet": "Anxiety",
    "factor": "Neuroticism",
    "id": 2,
    "is_reverse": true,
    "original_id": 2,
  },
  {
    "facet": "Angry Hostility",
    "factor": "Neuroticism",
    "id": 3,
    "is_reverse": false,
    "original_id": 5,
  },
  {
    "facet": "Angry Hostility",
    "factor": "Neuroticism",
    "id": 4,
    "is_reverse": true,
    "original_id": 7,
  },
  {
    "facet": "Depression",
    "factor": "Neuroticism",
    "id": 5,
    "is_reverse": false,
    "original_id": 9,
  },
  {
    "facet": "Depression",
    "factor": "Neuroticism",
    "id": 6,
    "is_reverse": true,
    "original_id": 10,
  },
  {
    "facet": "Self-Consciousness",
    "factor": "Neuroticism",
    "id": 7,
    "is_reverse": false,
    "original_id": 13,
  },
  {
    "facet": "Self-Consciousness",
    "factor": "Neuroticism",
    "id": 8,
    "is_reverse": true,
    "original_id": 14,
  },
  {
    "facet": "Immoderation",
    "factor": "Neuroticism",
    "id": 9,
    "is_reverse": false,
    "original_id": 17,
  },
  {
    "facet": "Immoderation",
    "factor": "Neuroticism",
    "id": 10,
    "is_reverse": true,
    "original_id": 18,
  },
  {
    "facet": "Vulnerability",
    "factor": "Neuroticism",
    "id": 11,
    "is_reverse": false,
    "original_id": 21,
  },
  {
    "facet": "Vulnerability",
    "factor": "Neuroticism",
    "id": 12,
    "is_reverse": true,
    "original_id": 22,
  },
  {
    "facet": "Friendliness",
    "factor": "Extraversion",
    "id": 13,
    "is_reverse": false,
    "original_id": 25,
  },
  {
    "facet": "Friendliness",
    "factor": "Extraversion",
    "id": 14,
    "is_reverse": true,
    "original_id": 26,
  },
  {
    "facet": "Gregariousness",
    "factor": "Extraversion",
    "id": 15,
    "is_reverse": false,
    "original_id": 29,
  },
  {
    "facet": "Gregariousness",
    "factor": "Extraversion",
    "id": 16,
    "is_reverse": true,
    "original_id": 30,
  },
  {
    "facet": "Assertiveness",
    "factor": "Extraversion",
    "id": 17,
    "is_reverse": false,
    "original_id": 33,
  },
  {
    "facet": "Assertiveness",
    "factor": "Extraversion",
    "id": 18,
    "is_reverse": true,
    "original_id": 34,
  },
  {
    "facet": "Activity Level",
    "factor": "Extraversion",
    "id": 19,
    "is_reverse": false,
    "original_id": 37,
  },
  {
    "facet": "Activity Level",
    "factor": "Extraversion",
    "id": 20,
    "is_reverse": true,
    "original_id": 38,
  },
  {
    "facet": "Excitement-Seeking",
    "factor": "Extraversion",
    "id": 21,
    "is_reverse": false,
    "original_id": 41,
  },
  {
    "facet": "Excitement-Seeking",
    "factor": "Extraversion",
    "id": 22,
    "is_reverse": true,
    "original_id": 42,
  },
  {
    "facet": "Positive Emotions",
    "factor": "Extraversion",
    "id": 23,
    "is_reverse": false,
    "original_id": 45,
  },
  {
    "facet": "Positive Emotions",
    "factor": "Extraversion",
    "id": 24,
    "is_reverse": true,
    "original_id": 46,
  },
  {
    "facet": "Trust",
    "factor": "Agreeableness",
    "id": 25,
    "is_reverse": false,
    "original_id": 49,
  },
  {
    "facet": "Trust",
    "factor": "Agreeableness",
    "id": 26,
    "is_reverse": true,
    "original_id": 50,
  },
  {
    "facet": "Morality",
    "factor": "Agreeableness",
    "id": 27,
    "is_reverse": false,
    "original_id": 53,
  },
  {
    "facet": "Morality",
    "factor": "Agreeableness",
    "id": 28,
    "is_reverse": true,
    "original_id": 54,
  },
  {
    "facet": "Altruism",
    "factor": "Agreeableness",
    "id": 29,
    "is_reverse": false,
    "original_id": 57,
  },
  {
    "facet": "Altruism",
    "factor": "Agreeableness",
    "id": 30,
    "is_reverse": true,
    "original_id": 58,
  },
  {
    "facet": "Cooperation",
    "factor": "Agreeableness",
    "id": 31,
    "is_reverse": false,
    "original_id": 61,
  },
  {
    "facet": "Cooperation",
    "factor": "Agreeableness",
    "id": 32,
    "is_reverse": true,
    "original_id": 62,
  },
  {
    "facet": "Modesty",
    "factor": "Agreeableness",
    "id": 33,
    "is_reverse": false,
    "original_id": 65,
  },
  {
    "facet": "Modesty",
    "factor": "Agreeableness",
    "id": 34,
    "is_reverse": true,
    "original_id": 66,
  },
  {
    "facet": "Sympathy",
    "factor": "Agreeableness",
    "id": 35,
    "is_reverse": false,
    "original_id": 69,
  },
  {
    "facet": "Sympathy",
    "factor": "Agreeableness",
    "id": 36,
    "is_reverse": true,
    "original_id": 70,
  },
  {
    "facet": "Self-Efficacy",
    "factor": "Conscientiousness",
    "id": 37,
    "is_reverse": false,
    "original_id": 73,
  },
  {
    "facet": "Self-Efficacy",
    "factor": "Conscientiousness",
    "id": 38,
    "is_reverse": true,
    "original_id": 74,
  },
  {
    "facet": "Orderliness",
    "factor": "Conscientiousness",
    "id": 39,
    "is_reverse": false,
    "original_id": 77,
  },
  {
    "facet": "Orderliness",
    "factor": "Conscientiousness",
    "id": 40,
    "is_reverse": true,
    "original_id": 78,
  },
  {
    "facet": "Dutifulness",
    "factor": "Conscientiousness",
    "id": 41,
    "is_reverse": false,
    "original_id": 81,
  },
  {
    "facet": "Dutifulness",
    "factor": "Conscientiousness",
    "id": 42,
    "is_reverse": true,
    "original_id": 82,
  },
  {
    "facet": "Achievement Striving",
    "factor": "Conscientiousness",
    "id": 43,
    "is_reverse": false,
    "original_id": 85,
  },
  {
    "facet": "Achievement Striving",
    "factor": "Conscientiousness",
    "id": 44,
    "is_reverse": true,
    "original_id": 86,
  },
  {
    "facet": "Self-Discipline",
    "factor": "Conscientiousness",
    "id": 45,
    "is_reverse": false,
    "original_id": 89,
  },
  {
    "facet": "Self-Discipline",
    "factor": "Conscientiousness",
    "id": 46,
    "is_reverse": true,
    "original_id": 90,
  },
  {
    "facet": "Cautiousness",
    "factor": "Conscientiousness",
    "id": 47,
    "is_reverse": false,
    "original_id": 93,
  },
  {
    "facet": "Cautiousness",
    "factor": "Conscientiousness",
    "id": 48,
    "is_reverse": true,
    "original_id": 94,
  },
  {
    "facet": "Imagination",
    "factor": "Openness",
    "id": 49,
    "is_reverse": false,
    "original_id": 97,
  },
  {
    "facet": "Imagination",
    "factor": "Openness",
    "id": 50,
    "is_reverse": true,
    "original_id": 98,
  },
  {
    "facet": "Artistic Interests",
    "factor": "Openness",
    "id": 51,
    "is_reverse": false,
    "original_id": 101,
  },
  {
    "facet": "Artistic Interests",
    "factor": "Openness",
    "id": 52,
    "is_reverse": true,
    "original_id": 102,
  },
  {
    "facet": "Emotionality",
    "factor": "Openness",
    "id": 53,
    "is_reverse": false,
    "original_id": 105,
  },
  {
    "facet": "Emotionality",
    "factor": "Openness",
    "id": 54,
    "is_reverse": true,
    "original_id": 107,
  },
  {
    "facet": "Adventurousness",
    "factor": "Openness",
    "id": 55,
    "is_reverse": false,
    "original_id": 109,
  },
  {
    "facet": "Adventurousness",
    "factor": "Openness",
    "id": 56,
    "is_reverse": true,
    "original_id": 110,
  },
  {
    "facet": "Intellect",
    "factor": "Openness",
    "id": 57,
    "is_reverse": false,
    "original_id": 113,
  },
  {
    "facet": "Intellect",
    "factor": "Openness",
    "id": 58,
    "is_reverse": true,
    "original_id": 114,
  },
  {
    "facet": "Liberalism",
    "factor": "Openness",
    "id": 59,
    "is_reverse": false,
    "original_id": 117,
  },
  {
    "facet": "Liberalism",
    "factor": "Openness",
    "id": 60,
    "is_reverse": true,
    "original_id": 118,
  },
]
`;

exports[`ключи пунктов тестов не меняются при правке узбекского текста (снимок) > RIASEC: id, type 1`] = `
[
  {
    "id": 1,
    "type": "R",
  },
  {
    "id": 2,
    "type": "I",
  },
  {
    "id": 3,
    "type": "A",
  },
  {
    "id": 4,
    "type": "S",
  },
  {
    "id": 5,
    "type": "E",
  },
  {
    "id": 6,
    "type": "C",
  },
  {
    "id": 7,
    "type": "R",
  },
  {
    "id": 8,
    "type": "I",
  },
  {
    "id": 9,
    "type": "A",
  },
  {
    "id": 10,
    "type": "S",
  },
  {
    "id": 11,
    "type": "E",
  },
  {
    "id": 12,
    "type": "C",
  },
  {
    "id": 13,
    "type": "R",
  },
  {
    "id": 14,
    "type": "I",
  },
  {
    "id": 15,
    "type": "A",
  },
  {
    "id": 16,
    "type": "S",
  },
  {
    "id": 17,
    "type": "E",
  },
  {
    "id": 18,
    "type": "C",
  },
  {
    "id": 19,
    "type": "R",
  },
  {
    "id": 20,
    "type": "I",
  },
  {
    "id": 21,
    "type": "A",
  },
  {
    "id": 22,
    "type": "S",
  },
  {
    "id": 23,
    "type": "E",
  },
  {
    "id": 24,
    "type": "C",
  },
  {
    "id": 25,
    "type": "R",
  },
  {
    "id": 26,
    "type": "I",
  },
  {
    "id": 27,
    "type": "A",
  },
  {
    "id": 28,
    "type": "S",
  },
  {
    "id": 29,
    "type": "E",
  },
  {
    "id": 30,
    "type": "C",
  },
]
`;

exports[`ключи пунктов тестов не меняются при правке узбекского текста (снимок) > Восприятие: id, style 1`] = `
[
  {
    "id": 1,
    "style": "reading",
  },
  {
    "id": 2,
    "style": "auditory",
  },
  {
    "id": 3,
    "style": "practice",
  },
  {
    "id": 4,
    "style": "repetition",
  },
  {
    "id": 5,
    "style": "reading",
  },
  {
    "id": 6,
    "style": "auditory",
  },
  {
    "id": 7,
    "style": "practice",
  },
  {
    "id": 8,
    "style": "repetition",
  },
]
`;

exports[`ключи пунктов тестов не меняются при правке узбекского текста (снимок) > Ценности: id, value 1`] = `
[
  {
    "id": 1,
    "value": "money",
  },
  {
    "id": 2,
    "value": "freedom",
  },
  {
    "id": 3,
    "value": "stability",
  },
  {
    "id": 4,
    "value": "recognition",
  },
  {
    "id": 5,
    "value": "helping",
  },
  {
    "id": 6,
    "value": "creativity",
  },
  {
    "id": 7,
    "value": "money",
  },
  {
    "id": 8,
    "value": "freedom",
  },
  {
    "id": 9,
    "value": "stability",
  },
  {
    "id": 10,
    "value": "recognition",
  },
  {
    "id": 11,
    "value": "helping",
  },
  {
    "id": 12,
    "value": "creativity",
  },
]
`;

exports[`ключи пунктов тестов не меняются при правке узбекского текста (снимок) > русский текст пунктов не изменился (сверка со снимком) 1`] = `
[
  "Часто беспокоюсь по пустякам.",
  "В большинстве ситуаций чувствую себя спокойно и расслабленно.",
  "Легко выхожу из себя, когда что-то идёт не по плану.",
  "Обычно я сдержан даже в раздражающих ситуациях.",
  "Временами я чувствую себя совершенно подавленным.",
  "В целом я доволен своей жизнью и работой.",
  "В присутствии незнакомых людей я чувствую себя неловко.",
  "Меня не беспокоит, что обо мне думают окружающие.",
  "Мне сложно устоять перед соблазнами, даже когда я знаю, что это во вред.",
  "Я хорошо контролирую свои импульсивные желания.",
  "В стрессовых ситуациях я нередко теряюсь и не знаю, что делать.",
  "Я сохраняю ясность мышления даже под значительным давлением.",
  "Я легко схожусь с новыми людьми.",
  "Мне требуется немало времени, чтобы почувствовать себя комфортно с незнакомцами.",
  "Мне нравится бывать на многолюдных мероприятиях.",
  "Я предпочитаю небольшие компании большим собраниям.",
  "В групповых обсуждениях я, как правило, беру слово первым.",
  "Я предпочитаю уступать инициативу другим, а не брать её на себя.",
  "Я обычно занят и веду активный образ жизни.",
  "Мне нравится не спешить и работать в спокойном темпе.",
  "Меня привлекают ситуации, связанные с определённым риском и адреналином.",
  "Я предпочитаю предсказуемость и стабильность острым ощущениям.",
  "Большую часть времени я настроен оптимистично и радостно.",
  "Я редко испытываю искренний энтузиазм или воодушевление.",
  "Я склонен доверять людям, пока они не дадут мне повод усомниться в них.",
  "Мне кажется, что большинство людей преследуют скрытые интересы.",
  "Я считаю, что честность важна даже тогда, когда правда неудобна.",
  "Иногда небольшая ложь во благо вполне оправдана.",
  "Мне приносит удовольствие помогать другим, даже если это требует усилий.",
  "Я считаю, что каждый должен решать свои проблемы самостоятельно.",
  "Я стараюсь находить компромисс, когда возникают разногласия.",
  "В споре я настаиваю на своём, пока не убеждён в правоте оппонента.",
  "Я не склонен выставлять свои достижения напоказ.",
  "Я заслуживаю большего признания, чем обычно получаю.",
  "Чужая боль отзывается во мне так, словно это моя собственная.",
  "Меня мало трогают чужие жалобы — каждый сам строит свою судьбу.",
  "Я уверен в своей способности справляться со сложными задачами.",
  "Столкнувшись с трудным заданием, я нередко сомневаюсь в своих силах.",
  "На моём рабочем месте всегда поддерживается порядок.",
  "Мне сложно поддерживать порядок в документах и файлах.",
  "Я выполняю взятые на себя обязательства, даже если это неудобно.",
  "Иногда я нарушаю правила, если считаю их излишними.",
  "Я ставлю перед собой амбициозные цели и прилагаю усилия для их достижения.",
  "Мне достаточно выполнять работу на приемлемом уровне — перфекционизм меня не привлекает.",
  "Я придерживаюсь намеченного плана, даже когда хочется отложить дело.",
  "Мне трудно заставить себя взяться за задачу, которая кажется скучной.",
  "Прежде чем действовать, я тщательно обдумываю возможные последствия.",
  "Я нередко принимаю решения импульсивно, не задумываясь о последствиях.",
  "У меня богатое воображение, и я часто погружаюсь в собственные фантазии.",
  "Я предпочитаю факты и реальность, а не абстрактные идеи и фантазии.",
  "Меня глубоко трогает музыка, живопись или литература.",
  "Я редко нахожу время или интерес для занятий искусством или культурой.",
  "Я хорошо осознаю свои эмоции и понимаю, что именно их вызывает.",
  "Я редко задумываюсь о своих внутренних переживаниях.",
  "Я охотно пробую новые виды деятельности, даже если не знаю, чего ожидать.",
  "Я предпочитаю привычные маршруты и устоявшийся распорядок новым экспериментам.",
  "Мне нравится размышлять над сложными философскими или научными вопросами.",
  "Абстрактные теоретические дискуссии меня быстро утомляют.",
  "Я считаю, что общественные нормы должны меняться вместе с развитием общества.",
  "Мне кажется, что проверенные временем традиции важнее новомодных идей.",
]
`;

exports[`ключи пунктов тестов не меняются при правке узбекского текста (снимок) > русский текст пунктов не изменился (сверка со снимком) 2`] = `
[
  "Ремонтировать технику или механизмы.",
  "Решать сложные задачи и головоломки.",
  "Придумывать что-то новое и оригинальное.",
  "Помогать людям решать их проблемы.",
  "Убеждать людей и вести их за собой.",
  "Работать с документами, цифрами, таблицами.",
  "Работать инструментами, собирать или чинить своими руками.",
  "Исследовать, как и почему что-то работает.",
  "Рисовать, заниматься дизайном, создавать визуальные образы.",
  "Обучать или объяснять что-то другим.",
  "Начинать своё дело, запускать проекты.",
  "Наводить порядок и систематизировать информацию.",
  "Работать на улице, с техникой или оборудованием.",
  "Анализировать данные, факты, статистику.",
  "Писать тексты, музыку или сценарии.",
  "Работать в команде и много общаться.",
  "Продавать, договариваться, вести переговоры.",
  "Следовать чётким инструкциям и правилам.",
  "Разбираться, как устроены машины и приборы.",
  "Изучать науку, проводить эксперименты.",
  "Выражать себя через творчество.",
  "Поддерживать и заботиться о людях.",
  "Брать на себя ответственность и руководить.",
  "Планировать, вести учёт и контролировать детали.",
  "Заниматься физическим трудом, строительством, монтажом.",
  "Докапываться до сути проблемы логическим путём.",
  "Работать там, где нет жёстких правил и есть свобода самовыражения.",
  "Разрешать конфликты и налаживать отношения.",
  "Рисковать ради большой выгоды.",
  "Выполнять аккуратную, точную работу по алгоритму.",
]
`;

exports[`ключи пунктов тестов не меняются при правке узбекского текста (снимок) > русский текст пунктов не изменился (сверка со снимком) 3`] = `
[
  "Зарабатывать много и иметь высокий доход.",
  "Быть независимым, самому распоряжаться своим временем.",
  "Стабильность и уверенность в завтрашнем дне.",
  "Признание, уважение и высокий статус в обществе.",
  "Приносить пользу людям и обществу.",
  "Создавать новое и выражать себя.",
  "Финансовое благополучие и возможность позволить себе желаемое.",
  "Свобода выбора и отсутствие жёсткого контроля.",
  "Надёжная, предсказуемая работа без резких перемен.",
  "Чтобы ваши достижения замечали и ценили.",
  "Помогать другим и делать мир лучше.",
  "Творческая свобода и оригинальность в работе.",
]
`;

exports[`ключи пунктов тестов не меняются при правке узбекского текста (снимок) > русский текст пунктов не изменился (сверка со снимком) 4`] = `
[
  "Мне легче всего усвоить новое, когда я читаю текст или книгу.",
  "Мне проще учиться, слушая лекции, аудио или устные объяснения.",
  "Я лучше всего учусь, когда сразу пробую делать сам.",
  "Мне помогает многократное повторение и работа по чётким шаблонам.",
  "Я лучше понимаю материал, когда вижу его написанным, а не слышу.",
  "Я хорошо запоминаю информацию на слух, когда её проговаривают.",
  "Мне нужно применить новое на практике, чтобы по-настоящему понять.",
  "Я лучше усваиваю материал, когда иду по пошаговой схеме и повторяю.",
]
`;
